# N-gramTextPrediction

./: CMakeLists.txt  LICENSE  README.md  compile.sh  index.cfg  main.cpp  preprocess_text.cpp
data/: Alisa_v_krajni_chydes.txt  alice.txt  config.cfg  tale_of_a_newyork_ghetto.txt  the_memois_of_sherlock_holmes  trai.txt  working_life_of_women.txt
data/test/: test.txt
dependencies/: preprocess_text.h  prev_main.cpp
includes/: errors.h  files.h  mt_func.hpp  my_mt_thread.hpp  parser.h
indexing/: myqueue.hpp  processing.cpp  processing.h
parser/: parser.cpp  parser.h
prediction/: prediction.cpp  prediction.h
results/: res_a.txt  res_n.txt  res_next_words.txt  res_prob.txt
results/test/: test_prob.txt  test_prop.txt  test_words.txt
sources/: files.cpp  mt_func.cpp  parser.cpp  run.py
src/: main.cpp  main.h  parser.h  processing.cpp  processing.h  result_files.cpp  result_files.h
